examples/test/testpolicy13068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13068
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key32: value44
      key8: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value40
          key27: value41
          key0: value28
      podSelector:
        matchLabels:
          key47: value47
          key22: value3
